<resources>
    <string name="app_name">Ecommerce Task</string>

    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="cart">Cart</string>
    <string name="location">Location</string>
    <string name="deliver_to">Deliver to</string>
    <string name="address">123 Gulberg, Lahore, Punjab, Pakistan</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="view_all">View All</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="category">Category</string>
    <string name="back">Back</string>
    <string name="banner">Banner</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="checkout">Checkout</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="items_format">Items(%d)</string>
    <string name="total_amount_format">Total Amount: Rs. %.2f</string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="on_checkout">On Checkout cart products will be fetched from database in required format and will be submitted to an API.</string>
    <string name="product">Product</string>
    <string name="something_went_wrong_loading">Something went wrong while loading %s</string>
    <string name="task">Task</string>
</resources>