<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.task.airlift_ecommerce_task.R" />

        <import type="android.view.View" />

        <import type="com.task.airlift_ecommerce_task.ui.dataBinding.formattingUtils.StringUtils" />

        <variable
            name="position"
            type="Integer" />

        <variable
            name="item"
            type="com.task.airlift_ecommerce_task.data.db.entities.Product" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lyt_parent"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_2sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border_grey"
        android:padding="@dimen/_8sdp">

        <ImageButton
            android:id="@+id/ibn_delete"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/delete"
            android:focusable="true"
            android:padding="@dimen/_5sdp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_cross"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_product"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:contentDescription="@string/category"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:src="@{item.image}" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{StringUtils.INSTANCE.getPrice(item.price, item.cartQuantity)}"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_product" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{StringUtils.INSTANCE.getTotalPrice(item.price, item.cartQuantity)}"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_product" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:ellipsize="end"
            android:maxLength="15"
            android:maxLines="1"
            android:text="@{item.title}"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_price" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lyt_add_remove"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/bg_border_accent"
            android:layout_marginTop="@dimen/_5sdp"
            android:visibility="@{item.cartQuantity>0?View.VISIBLE:View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <ImageButton
                android:id="@+id/ibn_remove"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/remove"
                android:focusable="true"
                android:padding="@dimen/_5sdp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:src="@{item.cartQuantity==1?R.drawable.ic_delete:R.drawable.ic_minus}" />

            <TextView
                android:id="@+id/tv_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.cartQuantity.toString()}"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ibn_add"
                app:layout_constraintStart_toEndOf="@id/ibn_remove"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/ibn_add"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/add"
                android:focusable="true"
                android:padding="@dimen/_5sdp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_plus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>